Atualização do Sobre nós e do Footer

--- a/assets/css/bootstrap/bootstrap-styles.css
+++ b/assets/css/bootstrap/bootstrap-styles.css
@@ -56,7 +56,7 @@
     position: relative;
   }
   
-  .section-header h2:after {
+  /* .section-header h2:after {
     content: "";
     position: absolute;
     display: block;
@@ -67,7 +67,7 @@
     right: 0;
     bottom: 0;
     margin: auto;
-  }
+  } */
   
   .section-header p {
     margin-bottom: 0;
