Atualização das caixas de texto

--- a/assets/css/bootstrap/bootstrap-styles.css
+++ b/assets/css/bootstrap/bootstrap-styles.css
@@ -37,6 +37,7 @@
   section {
     padding: 60px 0;
     overflow: hidden;
+    background: none;
   }
   
   .sections-bg {
@@ -50,9 +51,9 @@
   
   .section-header h2 {
     font-size: 32px;
-    font-weight: 600;
+    font-weight: 600; /*
     margin-bottom: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 20px; */
     position: relative;
   }
   
