--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,12 @@
 @import url("./faixa.css");
+@import url("./letreiro.css");
+
 
 * {
     background-color: #000;
     color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -10,6 +14,7 @@
 header {
     background-color: black;
     margin-bottom: 70px;
+    
 }
 
 .logo{
@@ -25,10 +30,9 @@ header {
     align-items: center;
     text-align: center;
     width: 100%;
-    position: absolute;
+    position: relative;
     height: 25px;
     left: 0px;
-    top: 80px;
     background: rgba(46, 47, 47, 0.65);
 }
 
@@ -47,77 +51,66 @@ header {
 .caixa-contador-geral{
     height: 500px;
     width: 100%;
+    padding: 15px;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: none;
-    flex-wrap: nowrap;
+    /* background: none; */
+    flex-wrap: wrap;
     align-content: center;
+    position: relative;
+    display: block;
+    text-align: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .caixa-contador-geral .caixa-texto1 {
     width: 100%;
-    border-radius: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     /* background: rgba(144, 255, 60, 0.4); */
     /* background-color: #DE5614; */
     position: relative;
     height: 330px;
-    margin: 15px;
-    background: rgba(222, 86, 20, 0.8);
-    align-content: center;
-    flex-wrap: nowrap;
+    font-size: 70vh;
+    background: none;
+    margin-top: 0;
+    padding-top: 0;
 }
 
-.caixa-contador-geral .caixa-texto1 p{
-  background: none;
-  font-weight: 400px;
-}
-
-.caixa-contador-geral .caixa-texto1 .nome-preenchivel{
+.caixa-contador-geral .caixa-texto1 .nome-preenchivel svg{
   align-items: center;
-  font-family: 'Roboto';
-  font-weight: 700;
-  font-size: 100px;
+  font-size: 150px;
   display: flex;
   align-items: center;
   text-align: center;
   background: none;
-  text-shadow: 1px 1px 2px black, 0 0 25px #90FF3C, 0 0 5px #90FF3C;
-  color: #FFFFFF;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  /* box-sizing: border-box; */
-}
-
-.caixa-contador-geral .caixa-texto1 .nome-preenchivel p{
-  align-items: center;
-  font-family: 'Roboto';
-  font-weight: 700;
-  /* font-size: 100px; */
-  display: flex;
-  align-items: center;
-  text-align: center;
-  background: none;
-  text-shadow: 1px 1px 2px black, 0 0 25px #90FF3C, 0 0 5px #90FF3C;
-  color: #FFFFFF;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  font-size: clamp(1em, 1em + 1vw, 1.5em);
+  width: 100%;
+  height: 100%;
+  /* text-shadow: 1px 1px 2px black, 0 0 25px #90FF3C, 0 0 5px #90FF3C; */
+  /* color: #FFFFFF; */
 }
 
 .caixa-contador-geral .caixa-texto1 .bemVindo{
   background: none;
   text-decoration: none;
+  position: relative;
+  color: #fff;
+  margin-bottom: 0;
+
 }
 
 .caixa-textoNum{
   display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
     padding: 5px;
@@ -132,12 +125,12 @@ header {
     flex-wrap: wrap;
 }
 
-.caixa-textoNum .col-lg-3 p{
+.caixa-textoNum .row-cols-lg-3 p{
   background: none;
   /* font-size: clamp(1em, 1em + 1vw, 1.5em); */
 }
 
-.caixa-textoNum .col-lg-8 p{
+.caixa-textoNum .row-cols-lg-8 p{
   background: none;
 }
 
@@ -205,6 +198,7 @@ h2{
     position: relative;
     color: #fff;
     text-align: center;
+    background: none;
 }
 
 .col-sm-7 {
