--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,6 +149,7 @@ header {
 
 .col-sm-8 {
   background: none;
+  height: 100%;
 }
 
 .col-sm-4 {
@@ -213,14 +214,14 @@ header {
   border-radius: 20px;
   width:100%;
   /* max-height: 450px; */
-  height: 450px;
+  height: 800px;
   display: flex;
   background: none;
   justify-content: center;
   /* box-shadow: 5px 5px 30px rgba(0, 0, 0, 0); */
   border-radius: 10px;
   overflow: hidden;
-  object-fit:fill;
+  object-fit:cover;
 }
 
 /* H's */
