--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,7 +214,7 @@ header {
   border-radius: 20px;
   width:100%;
   /* max-height: 450px; */
-  height: 800px;
+  height: 60%;
   display: flex;
   background: none;
   justify-content: center;
@@ -332,7 +332,7 @@ h3{
   width: 100%;
   min-width: 400px;
   max-width: 1600px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .team .memberNew {
